<resources>
    <string name="app_name">扑多</string>
    <string name="lottery_title">一元夺券</string>
    <string name="least_revelation">最新揭晓</string>
    <string name="friends">扑多圈</string>
    <string name="happiness_shop">扑多商城</string>
    <string name="personal">个人中心</string>
    <string name="lottery_detail">礼券详情</string>
    <string name="lottery_number">抽奖号码</string>
    <string name="qq">QQ</string>
    <string name="wechat">微信</string>
    <string name="moments">朋友圈</string>
    <string name="sina">新浪微博</string>
    <string name="qzone">QQ空间</string>
    <string name="domain">mypuduo.com</string>
    <string name="change_name_tips">4~20个字符，可由中英文、数字、“-”、“_”组成</string>
    <string name="protocol">我已阅读并同意扑多服务协议</string>
    <string name="input_new_name">输入新的用户名</string>
    <string name="number_limit">手机号码必须为11位</string>
    <string name="mobile_num">手机号码</string>
    <string name="invite_code">邀请码</string>
    <string name="commit_success_pay_tips">订单提交成功，就只差最后的支付啦！</string>
    <string name="choose_charge_way">选择充值方式</string>
    <string name="confirm_charge">确认充值</string>
    <string name="user_name">用户名</string>
    <string name="user">用户</string>
    <string name="tag">标签</string>
    <string name="loading_">加载中...</string>
    <string name="all_join_record">全部参与记录</string>
    <string name="all_join_record2">所有参与记录</string>
    <string name="my_gallery">我的相册</string>
    <string name="doing">正在进行</string>
    <string name="revealed">已经揭晓</string>
    <string name="invite_get_present">邀请有礼</string>
    <string name="input_address">请输入地址</string>
    <string name="setting_default_address">设置为默认地址</string>
    <string name="detail_address">详细地址</string>
    <string name="address_manage">地址管理</string>
    <string name="all_pic">全部图片</string>
    <string name="reload">重新加载</string>
    <string name="happy_coin">超级券</string>
    <string name="normal_coin">普通券</string>
    <string name="all_need">总需人次</string>
    <string name="progress">进度</string>
    <string name="attention_order_detail">注：请确认如下订单明细</string>
    <string name="you_have_no_record">您还没有记录哦...</string>
    <string name="you_have_no_exchange_record">暂时没有夺券哦~</string>
    <string name="no_goods_now">暂时没有商品哦</string>
    <string name="data_load_fail">数据加载失败</string>
    <string name="no_data">暂无数据</string>
    <string name="gallery">相册</string>
    <string name="lottery">抽奖</string>
    <string name="join">参与</string>
    <string name="win">中奖</string>
    <string name="get">收获</string>
    <string name="buy">购买</string>
    <string name="exchange">兑换</string>
    <string name="finish_register">完成注册</string>
    <string name="commit_mac">提交验证码</string>
    <string name="no_receive_">没收到?</string>
    <string name="resend">重新发送</string>
    <string name="welcome_activity">启动页</string>
    <string name="common_problem">常见问题</string>
    <string name="contact_us">联系我们</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出账号</string>
    <string name="no_win_record">您还没有中奖哦...</string>
    <string name="no_data_temporary">暂无数据</string>
    <string name="second_resend">秒后重新发送</string>
    <string name="please_input_mac">请输入验证码</string>
    <string name="mac">验证码</string>
    <string name="mobile_mac">手机验证码</string>
    <string name="pic_get_mac_tips">看不清？点击涂点刷新验证码</string>
    <string name="you_receive_a_mac_msg">您会收到一条验证码的短信，请输入验证码。</string>
    <string name="add_tag_tips">最多添加10个标签</string>
    <string name="get_mac">获取验证码</string>
    <string name="history_tag">历史标签</string>
    <string name="set_pwd_">设置密码：</string>
    <string name="pwd_limit">6到16个字符，区分大小写</string>
    <string name="confirm_new_msg">确认新密码：</string>
    <string name="please_input_phone_num">请输入手机号码</string>
    <string name="add_letter_description">此处添加文字描述~</string>
    <string name="add_water_mark">添加水印</string>
    <string name="add_channel">添加至一个频道</string>
    <string name="search_key_word">搜索关键字</string>
    <string name="search_tag">搜索标签</string>
    <string name="add_channel2">添加频道</string>
    <string name="save_to_gallery">保存到相册</string>
    <string name="take_photo">拍摄照片</string>
    <string name="join_count">参与人次</string>
    <string name="join_count_">参与人次：</string>
    <string name="joined">参与了</string>
    <string name="revealed_soon">即将揭晓</string>
    <string name="add_add">追加</string>
    <string name="buy_again">再次购买</string>
    <string name="wait_counting">正在计算，请稍后...</string>
    <string name="please_choose">请选择</string>
    <string name="period_choose">人次期数选择</string>
    <string name="count_choose">选择数量</string>
    <string name="count_detail">计算详情</string>
    <string name="period_join_">本期参与：</string>
    <string name="people_count">人次</string>
    <string name="revelation">往期揭晓</string>
    <string name="goods_status">商品状态</string>
    <string name="received">已签收</string>
    <string name="sms_msg">物流信息</string>
    <string name="goods_msg">商品信息</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_sending">商品派发中</string>
    <string name="get_user_">获得用户：</string>
    <string name="grow_problem">出现故障</string>
    <string name="lottery_fault_tips">彩票中心故障，恢复中请稍候...</string>
    <string name="sms_company_">物流公司：</string>
    <string name="sms_sn_num_">运单号码：</string>
    <string name="period_">期号：</string>
    <string name="address_msg">地址信息</string>
    <string name="get_goods">获得商品</string>
    <string name="sum_too_large">您输入的金额过大</string>
    <string name="confirm_receive_address">确认收货地址</string>
    <string name="confirm_receive">确认收货</string>
    <string name="add_to_inventory">加入清单</string>
    <string name="join_immediately">立即参与</string>
    <string name="new_period_ing">新一期正在火热进行!</string>
    <string name="loading_more">正在加载更多</string>
    <string name="more">更多</string>
    <string name="flower_send">送花</string>
    <string name="send">发送</string>
    <string name="sum">金额</string>
    <string name="redbag_discount2">红包折扣</string>
    <string name="commit_order">提交订单</string>
    <string name="should_pay_">实付款：</string>
    <string name="pic_letter_detail">图文详情</string>
    <string name="wifi_look">建议在WiFi下查看</string>
    <string name="you_join_">您参与了：</string>
    <string name="join_success_tips">恭喜您，参与成功！</string>
    <string name="wait_sys_to_reveal">请等待系统为您揭晓！</string>
    <string name="join_fail_tips">Sorry,参与失败！</string>
    <string name="join_fail_tips2">多支付的金额稍后将以余额的形式充值到您的账户，</string>
    <string name="join_fail_tips3">下次参与可以直接抵扣</string>
    <string name="success_part_join">您成功参与部分奖品的夺券！</string>
    <string name="reveal_time_">揭晓时间：</string>
    <string name="reveal_countdown_time_">揭晓倒计时：</string>
    <string name="lucky_time_">幸运众筹码：</string>
    <string name="my_join">我已参与</string>
    <string name="now_num">当前编号</string>
    <string name="all_need_">总需：</string>
    <string name="surplus">剩余</string>
    <string name="people">人</string>
    <string name="go_immediately">立即前往</string>
    <string name="buy_immediately">立即购买</string>
    <string name="continue_join">继续参与</string>
    <string name="continue_">继续</string>
    <string name="focus_each_other_can_chat">亲，要互相关注才能聊天哦！</string>
    <string name="look_join_record">查看参与记录</string>
    <string name="fail_to_join_tips1">您未能成功参与</string>
    <string name="fail_to_join_tips2">栏礼券，信息如下：</string>
    <string name="success_to_join_tips1">您成功参与</string>
    <string name="success_to_join_tips2">栏礼券共</string>
    <string name="success_to_join_tips3">次夺券，信息如下：</string>
    <string name="wait_pay_result">正在确认支付结果...请稍等待~</string>
    <string name="list_no_more">没有更多了</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_result_confirm">支付结果确认中</string>
    <string name="report_reason">请选择举报原因</string>
    <string name="report_success">举报成功</string>
    <string name="input_account">请输入账号                    </string>
    <string name="input_pwd">请输入密码                     </string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_right_pwd_length">请输入正确的密码长度</string>
    <string name="two_input_pwd_difference">两次输入的密码不相同</string>
    <string name="back_home">返回一元夺券</string>
    <string name="goods_total">商品合计</string>
    <string name="real_pay">实付</string>
    <string name="invite_send_flower">邀请朋友送我花</string>
    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝</string>
    <string name="jd_pay">京东支付</string>
    <string name="union_pay">银联支付</string>
    <string name="confirm_pay">确认支付</string>
    <string name="confirm">确认</string>
    <string name="sticker_depot">贴纸库</string>
    <string name="please_choose_photo">选择图片更加有趣哦！</string>
    <string name="no_exchange_record">您还没有购买商品哦~</string>
    <string name="exchange_goods">兑换商品</string>
    <string name="accounting">结算</string>
    <string name="lottery_tips">夺券有风险,参与需谨慎</string>
    <string name="other_pay_way">其他支付方式</string>
    <string name="choose_charge_count">选择充值金额（元）</string>
    <string name="msg_confirm">信息确认</string>
    <string name="no_charge">您还没有充值哦...</string>
    <string name="no_redbag">您没有红包哦...</string>
    <string name="charge_new">立即充值</string>
    <string name="inventory">清单</string>
    <string name="charge">充值</string>
    <string name="send_flower_fail">送花失败</string>
    <string name="system_msg">系统消息</string>
    <string name="add_to_black_tip1">确定要拉黑吗？</string>
    <string name="add_to_black_tip2">拉黑后您将接受不到TA发送的消息？</string>
    <string name="relieve_to_black_tip1">确定要解除拉黑吗？</string>
    <string name="relieve_to_black_tip2">解除拉黑后您将接受到TA发送的消息？</string>
    <string name="exchange_success">兑换成功</string>
    <string name="success">成功</string>
    <string name="exit_pay_tips">您的订单尚未支付，确定要终止支付操作吗？</string>
    <string name="begin_download_new_version">开始下载新版本</string>
    <string name="downloading_new_version">正在下载新版扑多</string>
    <string name="init_fail">初始化失败，请重启扑多</string>
    <string name="version_update">版本更新通知</string>
    <string name="please_input_charge_count">请输入充值金额</string>
    <string name="lucky_code_">幸运众筹码：</string>
    <string name="my_num_">我的号码：</string>
    <string name="my_num">我的号码</string>
    <string name="save">保存</string>
    <string name="complete">完成</string>
    <string name="no_sd_card">没有SD卡!</string>
    <string name="publish">发布</string>
    <string name="forget_pwd_">忘记密码？</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register">注册</string>
    <string name="newcomer_register">新手注册</string>
    <string name="complete_msg">完善资料</string>
    <string name="finish_modify">完成修改</string>
    <string name="next_step">下一步</string>
    <string name="add_address">添加地址</string>
    <string name="input_login_password_title">请输入登录密码验证身份确认！</string>
    <string name="input_login_password">输入登录密码</string>
    <string name="login_password">登录密码</string>
    <string name="choose_report_reason">请选择举报原因</string>
    <string name="delete_address">删除该地址</string>
    <string name="modify_address">修改地址</string>
    <string name="confirm_address">确认地址</string>
    <string name="use_other">使用其他</string>
    <string name="goods_send">商品派发</string>
    <string name="charge_record">充值记录</string>
    <string name="choose_redbag">选择红包</string>
    <string name="don_use_redbag">不使用红包</string>
    <string name="exchange_record">购买记录</string>
    <string name="focus_or_fans_">关注或粉丝页面</string>
    <string name="redbag_page">可用或用完/过期页面</string>
    <string name="flower_receive_record">收到花记录</string>
    <string name="flower_send_record">送花记录</string>
    <string name="start_page">开始页面</string>
    <string name="lottery_record">参与记录</string>
    <string name="win_record">获得的礼券</string>
    <string name="personal_data">个人资料</string>
    <string name="change_nickname">修改昵称</string>
    <string name="confirm_order">确认订单</string>
    <string name="pay_order">支付订单</string>
    <string name="pay_result">支付结果</string>
    <string name="cancel">取消</string>
    <string name="commit">确定</string>
</resources>