<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/px_5"
    android:paddingLeft="@dimen/px_80"
    android:paddingRight="@dimen/px_80"
    android:paddingTop="@dimen/px_5">

    <LinearLayout
        android:id="@+id/ll_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_for_white_trans"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_default_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_40"
            android:gravity="center"
            android:paddingLeft="@dimen/px_20"
            android:text="@string/input_login_password_title"
            android:textColor="@color/black_333_text"
            android:textSize="13sp" />

        <View
            android:layout_width="@dimen/px_600"
            android:layout_height="1px"
            android:layout_gravity="center_horizontal"
            android:background="@color/trans" />

        <EditText
            android:id="@+id/dialog_default_psw"
            android:layout_width="match_parent"
            android:hint="@string/input_login_password"
            android:layout_height="@dimen/px_60"
            android:layout_marginBottom="@dimen/px_10"
            android:layout_marginLeft="@dimen/px_60"
            android:layout_marginRight="@dimen/px_60"
            android:layout_marginTop="@dimen/px_30"
            android:background="@drawable/shape_for_gray_stroke_square"
            android:gravity="center|left"
            android:textColorHint="@color/gray_999_text"
            android:inputType="textPassword"
            android:textColor="@color/black_333_text"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/px_20"
            android:paddingLeft="@dimen/px_30"
            android:paddingRight="@dimen/px_30">

            <Button
                android:id="@+id/dialog_default_ok"
                android:layout_width="0dp"
                android:layout_height="@dimen/px_60"
                android:layout_weight="1"
                android:background="@color/trans"
                android:gravity="left|center_vertical"
                android:text="@string/confirm"
                android:textColor="@color/black_333_text"
                android:textSize="14sp" />

            <Button
                android:id="@+id/dialog_default_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/px_60"
                android:layout_weight="1"
                android:background="@color/trans"
                android:gravity="right|center_vertical"
                android:text="@string/cancel"
                android:textColor="@color/gray_999_text"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>