<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/px_50"
    android:paddingRight="@dimen/px_50" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_70"
            android:background="@color/e_bg"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/px_20"
            android:text="@string/charge"
            android:textColor="@color/black_333_text"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_deep" />

        <com.goodhappiness.widget.ClearEditText
            android:layout_marginTop="@dimen/px_15"
            android:id="@+id/dialog_charge_cet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/please_input_charge_count"
            android:inputType="number"
            android:gravity="center"
            android:padding="@dimen/px_20"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_default_ok"
                android:layout_width="0dp"
                android:layout_height="@dimen/px_60"
                android:layout_margin="@dimen/px_30"
                android:layout_weight="1"
                android:background="@color/e_bg"
                android:gravity="center"
                android:text="@string/commit"
                android:textColor="@color/black_333_text"
                android:textSize="13sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>