<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_tab_bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/px_100"
    android:layout_alignParentBottom="true"
    android:background="@color/white">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/gray_999_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_100">

        <LinearLayout
            android:id="@+id/id_tab_bottom_lottery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_tab_bottom_lottery"
                android:layout_width="@dimen/px_40"
                android:layout_height="@dimen/px_40"
                android:background="#0000"
                android:src="@mipmap/ico_tab1_footer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lottery_title"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_revelation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_tab_bottom_revelation"
                android:layout_width="@dimen/px_40"
                android:layout_height="@dimen/px_40"
                android:background="#0000"
                android:clickable="false"
                android:src="@mipmap/ico_tab2_footer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/least_revelation"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_friends"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_tab_bottom_friends"
                android:layout_width="@dimen/px_40"
                android:layout_height="@dimen/px_40"
                android:background="#0000"
                android:clickable="false"
                android:src="@mipmap/ico_tab3_footer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_shop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_tab_bottom_shop"
                android:layout_width="@dimen/px_40"
                android:layout_height="@dimen/px_40"
                android:background="#0000"
                android:clickable="false"
                android:src="@mipmap/ico_tab4_footer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happiness_shop"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_personal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_tab_bottom_personal"
                android:layout_width="@dimen/px_40"
                android:layout_height="@dimen/px_40"
                android:background="#0000"
                android:clickable="false"
                android:src="@mipmap/ico_tab5_footer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>